<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_above="@id/add_button"
    android:paddingStart="33dp"
    android:paddingEnd="104dp"
    android:layout_marginBottom="61dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_name_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_price_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_title"
        android:textColor="@color/add_button_text_color_selector"
        android:enabled="false"
        android:drawableLeft="@drawable/check_selector"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:letterSpacing="0.04"/>

</RelativeLayout>