<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/balance_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_two">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="37dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="end"
                android:text="@string/finances"
                android:textColor="@color/medium_grey"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/total_finances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="37dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="end"
                android:textColor="@color/pale_orange"
                android:textSize="48sp"
                android:textStyle="normal"
                tools:text="67000₽" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_six" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="26dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="26dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="end"
                        android:text="@string/expences"
                        android:textColor="@color/medium_grey"
                        android:textSize="10sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/my_expences"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="end"
                        android:textColor="@color/dark_sky_blue"
                        android:textSize="24sp"
                        android:textStyle="normal"
                        tools:text="5400₽" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white_six" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="26dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="26dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="end"
                        android:text="@string/income"
                        android:textColor="@color/medium_grey"
                        android:textSize="10sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/my_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="end"
                        android:textColor="@color/apple_green"
                        android:textSize="24sp"
                        android:textStyle="normal"
                        tools:text="7400₽" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_six" />

            <com.azizova.loftmoney.DiagramView
                android:id="@+id/diagram_view"
                android:layout_width="wrap_content"
                android:layout_height="176dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="56dp"
                app:color_expence = "@color/dark_sky_blue"
                app:color_income = "@color/apple_green"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
